--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "emailjs-com": "^2.6.3",
     "vue": "^2.6.11",
     "vue-router": "^3.4.3",
+    "vue-scrollactive": "^0.9.3",
     "vuetify": "^2.2.11"
   },
   "devDependencies": {
