--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "vue-cli-service serve",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "heroku-postbuild": "yarn add --force node-sass"
   },
   "dependencies": {
     "core-js": "^3.6.5",
